fix new course user search page text wrapping in table
test plan:
- add courses/users with long data fields that would normally overlap
- open the new course user search page
- the long data fields should be split across multiple lines instead
of overlapping

fixes CNVS-30328

Reviewed-on: https://gerrit.instructure.com/84423
Tested-by: Jenkins
QA-Review: Heath Hales <hhales@instructure.com>
Product-Review: Felix Milea-Ciobanu <fmileaciobanu@instructure.com>

--- a/app/stylesheets/bundles/account_course_user_search.scss
+++ b/app/stylesheets/bundles/account_course_user_search.scss
@@ -8,14 +8,15 @@
 }
 
 .grid-row {
+  padding-right: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: pre-wrap;
+
   .icon-stats, .icon-message{
     margin-left: 10px;
     margin-right: 10px;
   }
-}
-
-.grid-row {
-  padding-right: 10px;
 }
 
 [role=columnheader] a{
@@ -126,11 +127,6 @@
 
 .flex-grow-2 {
   flex-grow: 2;
-}
-
-.userUrl {
-  display: flex;
-  align-items: center;
 }
 
 .UserListRow__Avatar {
